--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
     "css-loader": "^7.1.2",
+    "eslint": "^9.10.0",
+    "globals": "^15.9.0",
     "html-webpack-plugin": "^5.6.0",
+    "prettier": "3.3.3",
     "style-loader": "^4.0.0",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4",
